# c-alculator

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: main.c
